Fix Issue #3 Whitespace
Fixed by reducing min-height attribute in custom.css

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -2,7 +2,7 @@
  * PAGE
  */
 body {
-  min-height: 2000px;
+  min-height: 200px;
   padding-top: 70px;
 }
 .in-link:before {
